cluster/gitops/networking/coredns/k8s-gateway/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
# cspell:words icanhazip ipify
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: coredns-k8s-gateway
specs:
  - description: coredns-k8s-gateway
    endpointSelector:
      matchLabels:
        app.kubernetes.io/instance: coredns-k8s-gateway
        app.kubernetes.io/name: coredns
    egress:
      # DNS resolution - this is needed for PTR lookups
      - toEndpoints:
          - matchLabels:
              endpoints.netpols.home.arpa/cluster-dns: "true"
        toPorts:
          - ports:
              - port: "53"
                protocol: UDP
              - port: "53"
                protocol: TCP
            rules:
              dns:
                # Only PTR lookups for LB IPs
                - matchPattern: "*.*.34.10.in-addr.arpa."
      # Watch k8s resources
      - toEntities:
          - kube-apiserver
        toPorts:
          - ports:
              - port: "6443"
                protocol: TCP
    ingress:
      # Kubelet for healthcheck
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP
              - port: "8081"
                protocol: TCP
      # DNS requests from the resolvers used by the rest of the intranet
      - fromCIDRSet:
          - cidrGroupRef: routers
        toPorts:
          - ports:
              - port: "53"
                protocol: UDP
              - port: "53"
                protocol: TCP
      # Metrics
      - fromEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: monitoring
              endpoints.netpols.home.arpa/metrics-scraper: "true"
        toPorts:
          - ports:
              - port: "9153"
                protocol: TCP
